--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:ital@0;1&family=Public+Sans:wght@300;400&family=Work+Sans&display=swap" rel="stylesheet">
     <title>Future</title>
 </head>
 <body>
     <header class="header">
-
+        <div class="header-container">
+            <h1 class="header-title">All Thinks Are Possible If You believe</h1>
+            <p class="header-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <div>
+                <button class="button">Contact Us</button>
+            </div>
+        </div>
     </header>
 
     <main class="main">
@@ -17,7 +26,7 @@
     </main>
 
     <footer class="footer">
-        
+
     </footer>
 </body>
 </html>
