--- a/index.html
+++ b/index.html
@@ -22,7 +22,58 @@
     </header>
 
     <main class="main">
+        <section class="section section1">
+            <div class="section1-image">
+                <div class="image-bg"></div>
+                <img class="image" src="./images/person.png" alt="">
+            </div>
+            <div class="section1-content">
+                <h3 class="content-header">My failures of previous year</h3>
+                <p class="content-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul>
+                    <li class="list-description">Contrary to popular belief, is not simply.</li>
+                    <li class="list-description">Contrary to popular belief.</li>
+                    <li class="list-description">Contrary to popular , is not simply.</li>
+                    <li class="list-description">Contrary to popular belief, is not simply.</li>
+                    <li class="list-description">Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
 
+        <section class="section section2">
+            <h1 class="section2-header">My Plans</h1>
+            <div class="section2-content">
+                <div class="content-item">
+                    <img src="./images/icons/web.png" alt="">
+                    <h4 class="item-header">Web Development</h4>
+                    <p class="item-detail">I want to start</p>
+                </div>
+                <div class="content-item">
+                    <img src="./images/icons/js.png" alt="">
+                    <h4 class="item-header">Javascript</h4>
+                    <p class="item-detail">I want to learn</p>
+                </div>
+                <div class="content-item">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h4 class="item-header">Smoking Habit</h4>
+                    <p class="item-detail">I want to end</p>
+                </div>
+                <div class="content-item">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h4 class="item-header">Ecommerce</h4>
+                    <p class="item-detail">I want to develop</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="section3">
+                <h3 class="section3-header">Awlays keep a positive mindset</h3>
+                <div>
+                    <button class="button2">Call Now</button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
