--- a/index.html
+++ b/index.html
@@ -77,7 +77,25 @@
     </main>
 
     <footer class="footer">
-        
+        <div class="footer-container">
+            <div class="contact-info">
+                <h3 class="contact-header">Future</h3>
+                <p class="contact-detail detail-1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="contact-detail detail-2">Email : info@gmail.com</p>
+                <p class="contact-detail detail-3">Phone : 01500 00 00 00</p>
+                <div class="social-icon">
+                    <img src="./images/icons/fb.png" alt="">
+                    <img src="./images/icons/twitter.png" alt="">
+                    <img src="./images/icons/youtube.png" alt="">
+                </div>
+            </div>
+
+            <div class="contact-form">
+                <h4 class="form-header">Subscribe</h4>
+                <input type="email" placeholder="Enter your email" name="" id="">
+                <input type="submit" value="Subscribe" class="button2">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
