--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <main class="main">
         <section class="section section1">
             <div class="section1-image">
-                <div class="image-bg"></div>
-                <img class="image" src="./images/person.png" alt="">
+                <div class="image-bg">
+                    <div class="radius-bg"></div>
+                </div>
             </div>
             <div class="section1-content">
                 <h3 class="content-header">My failures of previous year</h3>
